Fix profile photo height issues on iOS

--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -1,12 +1,10 @@
-.container {}
-
 p {
     margin-bottom: 1rem;
 }
 
 .profilePhoto {
     display: block;
-    height: fit-content;
+    height: 225px;
     width: 225px;
     border: 5px solid var(--color-lightest-navy);
     border-radius: 50%;
